kubeflow/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-central-dashboard
  labels:
    name: kubeflow-central-dashboard
  annotations:
    nginx.ingress.kubernetes/rewrite-taget: /
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - kubeflow.geniouslab.io
  #   secretName: istio-ingressgateway-certs
  rules:
  - host: kubeflow.geniouslab.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: istio-ingressgateway
            port: 
              number: 80
